--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="overflow: hidden; background-color: black; cursor: none; color: white">
 
-    <!-- <script type="module" src="lib/howler.min.js"></script> -->
+    <script src="lib/howler.core.min.js"></script> 
 
     <script type="module" src="src/shapegen.js"></script>
     <script type="module" src="src/input.js"></script>
@@ -20,6 +20,7 @@
     <script type="module" src="src/matrix.js"></script>
     <script type="module" src="src/transform.js"></script>
     <script type="module" src="src/transition.js"></script>
+    <script type="module" src="src/audio.js"></script>
     <script type="module" src="src/core.js"></script>
     <script type="module" src="src/util.js"></script>
 
